--- a/xinx/ui/rcslogform.ui
+++ b/xinx/ui/rcslogform.ui
@@ -10,14 +10,33 @@
    </rect>
   </property>
   <layout class="QGridLayout" >
-   <property name="margin" >
+   <property name="leftMargin" >
     <number>0</number>
    </property>
-   <property name="spacing" >
+   <property name="topMargin" >
+    <number>0</number>
+   </property>
+   <property name="rightMargin" >
+    <number>0</number>
+   </property>
+   <property name="bottomMargin" >
+    <number>0</number>
+   </property>
+   <property name="horizontalSpacing" >
+    <number>0</number>
+   </property>
+   <property name="verticalSpacing" >
     <number>0</number>
    </property>
    <item row="0" column="0" >
-    <widget class="QListWidget" name="m_rcsLogListWidget" />
+    <widget class="QListWidget" name="m_rcsLogListWidget" >
+     <property name="whatsThis" >
+      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is where &lt;span style=" font-weight:600;">XINX&lt;/span> store it's message from &lt;span style=" font-style:italic;">revision control system&lt;/span> console.&lt;/p>&lt;/body>&lt;/html></string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
