--- a/plugins/cvsplugin/cvsplugin.qrc
+++ b/plugins/cvsplugin/cvsplugin.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/" >
         <file>images/hi32-app-cervisia.png</file>
+	<file>translations/cvsplugin_fr.qm</file>
     </qresource>
 </RCC>
