--- a/plugins/cvsplugin/ui/customize.ui
+++ b/plugins/cvsplugin/ui/customize.ui
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Form</string>
+   <string>Customization of CVS Plugin</string>
   </property>
   <layout class="QGridLayout" >
    <property name="leftMargin" >
